--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </header>
 <main>
 	<div id="banner">
-		<img class="banner-img" src="" alt="Banner Print-it">
+		<img class="banner-img" src="./assets/images" alt="Banner Print-it">
 		<p>Impressions tous formats <span>en boutique et en ligne</span></p>
 			<div class="arrow arrow_left">
 				<img src="./assets/images/arrow_left.png" alt="arrow_left">
@@ -27,9 +27,6 @@
 				<img src="./assets/images/arrow_right.png" alt="arrow_right">
 			</div>
 			<div class="dots">
-				
-
-				</div>
 
 			</div>
 	</div>
